# tree-sitter-tarmac

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-tarmac.h  tree-sitter-tarmac.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tarmac/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAsmTests/: TreeSitterAsmTests.swift
queries/tarmac/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/: delete_zero_cycle.py
test/corpus/: testcase.test
